--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo" src="img/Robotron 2000 - Preto.png" alt="Robotron">
+            <img class="robo" src="img/Robotron 2000 - Preto.png" alt="Robotron" id="robotron">
             <figcaption class="titulo">BLACK <br>2000</figcaption>
         </section>
 
@@ -98,5 +98,6 @@
             </form>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
